# ComfyUI-MeshSegmenter

./: README.md  __init__.py  _run_segmentation_worker.py  install.py  prestartup_script.py  pyproject.toml  requirements.txt
assets/: camera.stl  flower_in_pot.stl
install_scripts/: __init__.py  python_deps.py  samesh.py  system_deps.py
nodes/: __init__.py  decimate.py
nodes/_utils/: __init__.py  mesh_ops.py
nodes/partfield/: __init__.py  feature_extractor.py  feature_visualizer.py  model_downloader.py  segment_by_features.py  segmenter.py
nodes/sammesh/: __init__.py  apply_labels.py  apply_labels_quad.py  combine_bmasks.py  combine_masks.py  exporter.py  exporter_quad.py  generate_masks.py  graph_cut.py  lift_labels.py  loader.py  model_downloader.py  multiview_renderer.py  pyvista_loader.py  renderer.py  segmenter.py  smooth_labels.py  types.py
partfield/: model_trainer_pvcnn_only_demo.py
partfield-src/partfield/: model_trainer_pvcnn_only_demo.py
partfield/model/PVCNN/: dnnlib_util.py
sam2/: __init__.py  build_sam.py  sam2_video_predictor.py
samesh/: =1.3.0
samesh/data/: loaders.py
samesh/metrics/: mesh_segmentation.py  mesh_segmentation_cut_discrepancy.py  mesh_segmentation_test.py
samesh/models/: lifting.py  mask_utils.py  sam.py  sam3.py  sam_mesh.py  shape_diameter_function.py  smoothing.py
samesh/renderer/: renderer.py  renderer_animations.py
samesh/utils/: math.py  mesh.py  quad_mesh.py
web/js/: backend_mappings.json  dynamic_widgets.js
workflows/: partfield-seg.json  recon.json  samesh-seg.json
(+7 files in other folders)
